Fixed: Landing Page - IE9 on the top carousel the wording 'play event' and the play icon overlap.

--- a/src/UKP.Website/Content/less/theme.less
+++ b/src/UKP.Website/Content/less/theme.less
@@ -1098,8 +1098,11 @@ right: 0;
     }
    }
    span{
-    //display: block;
-    margin-top: 13px;
+      top: 90px; 
+      position: absolute;
+      width: 100%; 
+      left: 0px; 
+      margin-top: 0px;
    }
       .carousel-caption-inner{
         text-align: center;
